fix overlapping

--- a/PPrince/P_cri.css
+++ b/PPrince/P_cri.css
@@ -215,7 +215,7 @@ h5{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin: left -8px;
+    margin:-15px;
     border: 2px solid blue;
 }
 
